[metadata]
name = collectd-gnocchi
url = http://github.com/gnocchixyz/collectd-gnocchi
summary = Gnocchi storage plugin for collectd
description-file =
    README.rst
author = Julien Danjou
author-email = julien@danjou.info
home-page = http://github.com/gnocchixyz/collectd-gnocchi
classifier =
        Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    collectd_gnocchi

[wheel]
universal = 1
